<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@color/background"
                tools:context="com.coronate.mymanager.PasswordAccountActivity" >


    <ImageView
            android:id="@+id/iv_saveaccount"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/iv_saveaccount"
            android:src="@drawable/save" />

    <EditText
            android:id="@+id/et_accountname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/iv_saveaccount"
            android:hint ="@string/placehoder_accname"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:singleLine="true"
            android:inputType="text">
    </EditText>

    <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/et_accountname"
            android:hint="@string/placehoder_username"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:singleLine="true"
            android:inputType="text" />

    <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:layout_below="@id/et_username"
            android:hint="@string/placehoder_pwd"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:singleLine="true"
            android:inputType="textPassword" />

    <EditText
            android:id="@+id/et_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/et_password"
            android:hint="@string/placehoder_notes"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:singleLine="true"
            android:inputType="text" />

</RelativeLayout>
