<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.coronate.mymanager.MainManager" >

    <ImageView
            android:id="@+id/iv_passwordmanager"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:contentDescription="@string/iv_password_manager"
            android:src="@drawable/password_manager" />

    <TextView
            android:id="@+id/txt_passwordmanager"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/iv_passwordmanager"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/iv_password_manager" />

    <ImageView
            android:id="@+id/iv_passwordgenerator"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:contentDescription="@string/iv_password_generator"
            android:src="@drawable/password_generator" />

    <TextView
            android:id="@+id/txt_passwordgenerator"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/iv_passwordgenerator"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/iv_password_generator" />

    <ImageView
            android:id="@+id/iv_billmanager"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/txt_passwordmanager"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:contentDescription="@string/iv_bill_manager"
            android:src="@drawable/bill_manager" />

    <TextView
            android:id="@+id/txt_billmanager"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/iv_billmanager"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/iv_bill_manager" />

    <ImageView
            android:id="@+id/iv_expensemanager"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txt_passwordgenerator"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:contentDescription="@string/iv_expense_manager"
            android:src="@drawable/expense_manager" />

    <TextView
            android:id="@+id/txt_expensemanager"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/iv_expensemanager"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/iv_expense_manager" />

    <ImageView
            android:id="@+id/iv_familylocator"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/txt_billmanager"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:contentDescription="@string/iv_family_locator"
            android:src="@drawable/family_locator" />

    <TextView
            android:id="@+id/txt_familylocator"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/iv_familylocator"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/iv_family_locator" />

</RelativeLayout>

